@@ -1,4 +1,4 @@
 DIST granite-5.2.4.tar.gz 390145 BLAKE2B 30abee1669bf2211aa776a5ddf38b914bc95e466f2853f4e852b77947b666c06ce8ac77a47b22bce0cdbf8e6804935007b5cef700c49db302528b7bbb0063543 SHA512 3a52a92a49f887bb802754b99b7c9c3fd13c197c74da7c25f1fd4c03b76d916197079b813909d2cceb11cb10b26e9f64978563b95319d0c744c5b612c50ce306
-EBUILD granite-5.2.4.ebuild 861 BLAKE2B 63ca66c2dbe7391f7687f76cfb70009d0a273ad38d859f1fa74d84e9480d0d89338bc4a305a823548afcce7e3bf7d34fa413c30e9f0fab08e3c252b721ec7780 SHA512 904a5a5ba0e8b95fb2973ae81d57212d059fde84efb8c660d81f17b7d4539c098e0724b8c4acbd39b31c2f1cc65e77b08adb09ef6427f3255764c346408411e5
-MISC ChangeLog 446 BLAKE2B fd599f185905a0e0e2361e944ed9405b6a3a2e73e8d93a8d11d08d2a1c6881b6ae6973b61468c527ea6278099755034a79ef2ef12d847402ba9a110c86071c29 SHA512 1b6f32553c8b17683c2eab361323c47f9382df936b350d89a293637e0b5bd0736e318816cbb71e4cb68aed119d459f9f72eb5b1fc8bc131a21b640300bcc55ed
-MISC metadata.xml 563 BLAKE2B 1bfeeb790fbacf5024fcc6b0492dc88905ac469bf326262d5b1fa53336122d39c735100285341b92a9190b1625f1b747237b80a0800798d0b0a3fe85af1175c1 SHA512 4fcca87a2fa2597187539812749ab74e5391cc7330899251e96611737cee83df7522f83d10c9aef7da41decbd2538ab50f07dd497783fe1db0a17464cadb89a8
+EBUILD granite-5.2.4.ebuild 1224 BLAKE2B 333e34be6db2be1310d4cd87e14707215a108587c66ac85a5ebc5eef42414a9481b6907db4a3ee7757d5f31ab1f49058b6dc516abf68294bebb5c3c2b5a73267 SHA512 b51828d2e97ffaa7ba9540b913aaa182788c481ba4061bbc24ceaa4e8bba2c26ab959832c32759215778d7d603263ad39ed4f961b8eb0dab184c52649a4a363a
+MISC ChangeLog 547 BLAKE2B 81997cf0361f81445d44ed9d8194821d76e29a9fad9abb5d8f16c45ca09661401fb9dd1d1d3c4e9d4b88f3561233951b6a6eabecaebfb90a3b2687a980815b3e SHA512 de1791b21776587e4a9c2fb2d60783ce63fead3d028eb7864008e41183d201be79b729e7a004bb7ff9a0dad14a28bf6d3bf5b2fbf6906cdf3b77dec13bd3b6a2
+MISC metadata.xml 695 BLAKE2B 251666b8d527fe7308162cc3cb8f9930df967e9eb57673cff6ba7306c65d3cd7082f42cddcd40f920bb8f0ba838cc57c652690b98e86784df2cc0d3fecc0906e SHA512 e90e892b32e3439be4ad4b3aea593878f4c7c158e97fda4c657fdc6b1f56ba31b18bc516e2db40b0a766820dba0bab255fc361d5ac86147c6f422b39de51c835
